# zero_food_waste_jarczan

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  tasks.py
app/: admin.py  date_calculator.py  models.py  serializers.py  tokens.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20210717_1106.py  0003_account.py
app/templates/app/: add.html  main.html  product_list.html  remove.html  update.html
project/: settings.py  urls.py
tests/: test_zero_food_waste_jarczan.py
