[tool.poetry]
name = "zero_food_waste_jarczan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
djangorestframework = "^3.15.0"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
pytest = "8.1.1"
pytest-django = "^4.8.0"
django-debug-toolbar = "^4.3.0"
flake8 = "^3.9.2"
invoke = "^2.2.0"
black = "^24.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
